# codetags

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
code_sample/python/: module1.py  module2.py
code_sample/python/submodule/: submodule1.py
docs/: regex.md
notebooks/: 1.0-test-paths.ipynb  2.0-use-tokenize.ipynb  2.1-use-regex.ipynb  3.0-dev-cli.ipynb  4.0-dev-codetags.ipynb
src/codetags/: __init__.py  cli.py  codetags.py  output.py  utils.py
tests/: test_codetags.py
